[package]
name = "arraydeque"
version = "0.4.5"
authors = ["andylokandy"]
license = "MIT/Apache-2.0"

description = "A ring buffer with a fixed capacity, which can be stored on the stack."
documentation = "https://docs.rs/arraydeque"
repository = "https://github.com/andylokandy/arraydeque"
homepage = "https://github.com/andylokandy/arraydeque"

keywords = ["ring", "circular", "stack", "deque", "array"]
categories = ["no-std", "data-structures", "memory-management"]

[dependencies]
generic-array = { version = "0.12", optional = true }

[features]
default = ["std"]
std = []
use_generic_array = ["generic-array"]
